# wanikani-mcp

./: .containerignore  .env.example  .gitignore  Containerfile  README.md  Taskfile.yml  alembic.ini  deploy.md  download_architecture_svg.sh  pyproject.toml  render.yaml  wanikani_mcp.db
alembic/: env.py
alembic/versions/: 9d90676243fe_initial_database_schema_with_wanikani_.py
src/wanikani_mcp/: __init__.py  __main__.py  auth.py  config.py  database.py  http_server.py  mcp_server.py  models.py  server.py  sync_service.py  wanikani_client.py
tests/: conftest.py  test_database.py  test_http_server.py  test_models.py
