[project]
name = "wanikani-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jack.edney", email = "jack.edney@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "apscheduler>=3.11.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.10.5",
    "httpx>=0.28.1",
    "mcp>=1.11.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[project.scripts]
wanikani-mcp = "wanikani_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
